# csubgoto

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
examples/: example1.cpp  example2.cpp
examples/invalid/: invalid1.cpp
examples/valid/: valid1.cpp  valid10.cpp  valid11.cpp  valid2.cpp  valid3.cpp  valid4.cpp  valid5.cpp  valid6.cpp  valid7.cpp  valid8.cpp  valid9.cpp
src/: csubgoto.cpp
test/: test.sh
